Deploy/user_api_deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: identity-deployment
spec:
    replicas: 1
    selector:
       matchLabels:
          app: identity-app
    template:
       metadata:
          labels:
             app: identity-app
       spec:
          containers:
          - name: identity
            image:  sokolik/user-api:v2
            ports:
              - name: web
                containerPort: 8000
