Deploy/user_api_deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: identity-service
spec:
  selector:
    app: identity-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: web
  type: NodePort
